Update name of application

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Clonenections",
-  "name": "Clonenections",
+  "short_name": "Clonections",
+  "name": "Clonections",
   "icons": [],
   "start_url": ".",
   "display": "standalone",
